CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2011 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$

2011.July.2 (0.9.22)

  * New Tools:
    ----------
    * Label - A tool to add text to a drawing, which can be modified or
      moved later.
      By Arunodai Reddy Vudem (GSOC 2008)
      With modifications and integration by
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

  * New Magic Tools:
    ----------------
    * Blinds - Close window blinds over your picture.
      Pattern - Draws a tiled pattern around the picture.
      Perspective - Change the image's perspective.
      Mosaic Hexagon, Mosaic irregular, Mosaic square - Glass mosaic effects.
      Tiles - Draws a symettric pattern around the picture.
      Zoom - Zoom the image in or out.
      By Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Puzzle - Slide parts of your picture around like a sliding puzzle.
      By Adam 'foo-script' Rakowski <foo-script@o2.pl>
      with modifications by Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * ROYGBIV Rainbow - Draw a rainbow arc using solid colors of
      Red, Orange, Yellow, Green, Blue, Indigo and Violet.

    * Symmetry Left/Right, Symmetry Up/Down - Paint with relfective symmetry
      across the horizontal or vertical center of the image.
      (Like Kaleidoscope, but only one mirrored brush, either left/right
      or up/down.)

    * Wet Paint - Draws a light coat of paint, and smudges at the same time.
      (Based on Smudge tool.  Requested by gallery artist Angela.)

  * Build System Improvements:
    --------------------------
    * Variety of tweaks to help Tux Paint cross-compile for Windows under Linux
      Volker Grabsch <vog@notjusthosting.com>

    * Added support for building under Haiku OS
      Scott McCreary <scottmc@users.sourceforge.net>

    * Integrated OpenCandy-powered recommendation service